// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parse @attribute before fn 1`] = `
[
  {
    "calls": [],
    "end": 31,
    "kind": "fn",
    "name": "main",
    "nameElem": {
      "end": 26,
      "kind": "fnName",
      "name": "main",
      "start": 22,
    },
    "start": 5,
    "typeRefs": [],
  },
]
`;

exports[`parse @compute @workgroup_size(a, b, 1) before fn 1`] = `
[
  {
    "calls": [],
    "end": 61,
    "kind": "fn",
    "name": "main",
    "nameElem": {
      "end": 56,
      "kind": "fnName",
      "name": "main",
      "start": 52,
    },
    "start": 5,
    "typeRefs": [],
  },
]
`;

exports[`parse array alias 1`] = `
[
  {
    "end": 37,
    "kind": "alias",
    "name": "Points3",
    "start": 5,
    "typeRefs": [
      {
        "end": 36,
        "kind": "typeRef",
        "name": "array",
        "start": 21,
      },
      {
        "end": 36,
        "kind": "typeRef",
        "name": "Point",
        "start": 21,
      },
    ],
  },
]
`;

exports[`parse const_assert 1`] = `
[
  {
    "end": 24,
    "kind": "globalDirective",
    "start": 5,
  },
  {
    "calls": [],
    "end": 42,
    "kind": "fn",
    "name": "main",
    "nameElem": {
      "end": 37,
      "kind": "fnName",
      "name": "main",
      "start": 33,
    },
    "start": 30,
    "typeRefs": [],
  },
]
`;

exports[`parse empty string 1`] = `[]`;

exports[`parse fn foo() { } 1`] = `
[
  {
    "calls": [],
    "end": 12,
    "kind": "fn",
    "name": "foo",
    "nameElem": {
      "end": 6,
      "kind": "fnName",
      "name": "foo",
      "start": 3,
    },
    "start": 0,
    "typeRefs": [],
  },
]
`;

exports[`parse fn with calls 1`] = `
[
  {
    "calls": [
      {
        "end": 14,
        "kind": "call",
        "name": "foo",
        "start": 11,
      },
      {
        "end": 21,
        "kind": "call",
        "name": "bar",
        "start": 18,
      },
    ],
    "end": 26,
    "kind": "fn",
    "name": "foo",
    "nameElem": {
      "end": 6,
      "kind": "fnName",
      "name": "foo",
      "start": 3,
    },
    "start": 0,
    "typeRefs": [],
  },
]
`;

exports[`parse foo.bar();  1`] = `
[
  {
    "calls": [
      {
        "end": 19,
        "kind": "call",
        "name": "foo.bar",
        "start": 12,
      },
    ],
    "end": 24,
    "kind": "fn",
    "name": "main",
    "nameElem": {
      "end": 7,
      "kind": "fnName",
      "name": "main",
      "start": 3,
    },
    "start": 0,
    "typeRefs": [],
  },
]
`;

exports[`parse foo::bar();  1`] = `
[
  {
    "calls": [
      {
        "end": 20,
        "kind": "call",
        "name": "foo::bar",
        "start": 12,
      },
    ],
    "end": 25,
    "kind": "fn",
    "name": "main",
    "nameElem": {
      "end": 7,
      "kind": "fnName",
      "name": "main",
      "start": 3,
    },
    "start": 0,
    "typeRefs": [],
  },
]
`;

exports[`parse global diagnostic 1`] = `
[
  {
    "end": 43,
    "kind": "globalDirective",
    "start": 5,
  },
  {
    "calls": [],
    "end": 61,
    "kind": "fn",
    "name": "main",
    "nameElem": {
      "end": 56,
      "kind": "fnName",
      "name": "main",
      "start": 52,
    },
    "start": 49,
    "typeRefs": [],
  },
]
`;

exports[`parse root level ;; 1`] = `[]`;

exports[`parse simple alias 1`] = `
[
  {
    "end": 24,
    "kind": "alias",
    "name": "NewType",
    "start": 0,
    "typeRefs": [
      {
        "end": 23,
        "kind": "typeRef",
        "name": "OldType",
        "start": 16,
      },
    ],
  },
]
`;

exports[`parse top level override and const 1`] = `
[
  {
    "end": 21,
    "kind": "var",
    "name": "x",
    "start": 5,
    "typeRefs": [],
  },
  {
    "end": 38,
    "kind": "var",
    "name": "y",
    "start": 26,
    "typeRefs": [],
  },
  {
    "calls": [],
    "end": 56,
    "kind": "fn",
    "name": "main",
    "nameElem": {
      "end": 51,
      "kind": "fnName",
      "name": "main",
      "start": 47,
    },
    "start": 44,
    "typeRefs": [],
  },
]
`;

exports[`parse top level var 1`] = `
[
  {
    "end": 52,
    "kind": "var",
    "name": "u",
    "start": 5,
    "typeRefs": [
      {
        "end": 51,
        "kind": "typeRef",
        "name": "Uniforms",
        "start": 43,
      },
    ],
  },
  {
    "calls": [],
    "end": 76,
    "kind": "fn",
    "name": "main",
    "nameElem": {
      "end": 71,
      "kind": "fnName",
      "name": "main",
      "start": 67,
    },
    "start": 64,
    "typeRefs": [],
  },
]
`;

exports[`wordNumArgs parses (a, b, 1) 1`] = `
[
  "a",
  "b",
  "1",
]
`;
